/ ‘Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md’

--- a/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md
+++ b/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md
@@ -125,34 +125,34 @@ Proof
 ## 4: $L^p$ Spaces
 
 
-### a
+a.
 Prove Holder's inequality:
 let $f\in L^p, g\in L^q$ with $p, q$ conjugate, and show that
 \begin{align*}
 \pnorm{fg}p \leq \pnorm{f}p \cdot \pnorm{g}q
 .\end{align*}
 
-### b
+b.
 Prove Minkowski's Inequality:
 \begin{align*}
 1\leq p < \infty \implies \pnorm{f+g}{p} \leq \pnorm{f}{p}+ \pnorm{g}{p}
 .\end{align*}
 Conclude that if $f, g\in L^p(\RR^n)$ then so is $f+g$.
 
-### c
+c.
 Let $X = [0, 1] \subset \RR$.
 
-1. Give a definition of the Banach space $L^\infty(X)$ of essentially bounded functions of $X$.
+  1. Give a definition of the Banach space $L^\infty(X)$ of essentially bounded functions of $X$.
 
-2. Let $f$ be non-negative and measurable on $X$, prove that
-\begin{align*}
-\int_X f(x)^p \,dx \converges{p\to\infty}\to
-\begin{dcases}
-\infty \quad\text{or} \\
-m\qty{\theset{f\inv(1)}}
-\end{dcases}
-,\end{align*}
-and characterize the functions of each type
+  2. Let $f$ be non-negative and measurable on $X$, prove that
+  \begin{align*}
+  \int_X f(x)^p \,dx \converges{p\to\infty}\to
+  \begin{dcases}
+  \infty \quad\text{or} \\
+  m\qty{\theset{f\inv(1)}}
+  \end{dcases}
+  ,\end{align*}
+  and characterize the functions of each type
 
 
 :::{.solution}
@@ -177,14 +177,11 @@ and characterize the functions of each type
 
 Let $X$ be a normed vector space.
 
-### a
-Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional*.
+a. Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional*.
 
-### b
-Define what it means for $L$ to be *bounded* and show $L$ is bounded $\iff L$ is continuous.
+b. Define what it means for $L$ to be *bounded* and show $L$ is bounded $\iff L$ is continuous.
 
 
-### c
-Prove that $(X\dual, \norm{\wait}_{\op})$ is a Banach space.
+c. Prove that $(X\dual, \norm{\wait}_{\op})$ is a Banach space.
 
 
