/ ‘Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md’

--- a/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md
+++ b/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam2.md
@@ -63,8 +63,7 @@ b. Let $\theset{a_n}_{n\in \NN} \in \ell^2(\NN)$ and prove that there exists an 
 
 c. Prove that if $\theset{u_n}$ is *complete*, Bessel's inequality becomes an equality.
 
-
-:::{.solution title="to b"}
+:::{.solution title="part b"}
 \envlist
 
 - Take $\theset{a_n} \in \ell^2$, then note that $\sum \abs{a_n}^2 < \infty \implies$ the tails vanish.
@@ -85,7 +84,8 @@ since the $u_k$ are all orthogonal.
 .\]
 
 :::
-:::{.solution}
+
+:::{.solution title="part c"}
 Let $x$ and $u_n$ be arbitrary. 
 
 \[
@@ -113,6 +113,7 @@ x = \sum_{k=1}^\infty \inner{x}{u_k} u_k
 \implies
 \norm{x}^2 = \sum_{k=1}^\infty \abs{\inner{x}{u_k}}^2. \qed
 .\]
+
 
 :::
 
