/ ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md’ / ‘Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
@@ -1,7 +1,7 @@
 # Midterm Exam 1 (October 2018)
 
 ## Problem 1
-
+\label{equivalence_of_approximating_measures}
 Let $E \subseteq \RR^n$ be bounded.
 Prove the following are equivalent: 
 
