--- a/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
@@ -9,3 +9,23 @@ a. Prove using the definition of Lebesgue outer measure that
 m \qty{ \Union_{j=1}^{\infty } E_j  } \leq \sum_{j=1}^{\infty } m_*(E_j) 
 .\]
 
+b. Prove that for any \( E \subseteq \RR^n \) and any \( \epsilon> 0 \) there exists an open set $G$ with $E \subseteq G$ and
+\[
+m_*(E) \leq m_*(G) \leq m_*(E) + \epsilon
+.\]
+
+## Problem 2
+
+a. See \cref{equivalence_of_approximating_measures}
+
+b. Let $f_k$ be a sequence of extended real-valued Lebesgue measurable function.
+
+    i. Prove that $\inf_k f_k, \sup_k f_k$ are both Lebesgue measurable function.
+    Hint: argue that
+\[
+\ts{x \st \inf_k f_k(x) < a} = \Union_k \ts{x \st f_k(x) < a}
+.\]
+
+    ii. Carefully state Fatou's Lemma and deduce the Monotone Converge Theorem from it.
+
+
