/ ‘Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
@@ -21,11 +21,24 @@ a. See \cref{equivalence_of_approximating_measures}
 b. Let $f_k$ be a sequence of extended real-valued Lebesgue measurable function.
 
     i. Prove that $\inf_k f_k, \sup_k f_k$ are both Lebesgue measurable function.
-    Hint: argue that
+    
+        *Hint: argue that*
 \[
 \ts{x \st \inf_k f_k(x) < a} = \Union_k \ts{x \st f_k(x) < a}
 .\]
 
     ii. Carefully state Fatou's Lemma and deduce the Monotone Converge Theorem from it.
+
+
+## Problem 3
+
+a. Prove that if $f, g\in L^+(\RR)$ then 
+\[
+\int(f +g) = \int f + \int g
+.\]
+  Extend this to establish that if $\ts{ f_k} \subseteq L^+(\RR^n)$ then
+  \[
+  \int \sum_k f_k = \sum_k \int f_k
+  .\]
 
 
