/ ‘Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_10_2019_Fall_Exam1.md
@@ -42,3 +42,22 @@ a. Prove that if $f, g\in L^+(\RR)$ then
   .\]
 
 
+b. Let $\ts{E_j}_{j\in \NN} \subseteq \mathcal{M}(\RR^n)$ with $E_j \nearrow E$. 
+  Use the countable additivity of $\mu_f$ on \( \mathcal{M}(\RR^n)  \) established above to show that
+  \[
+  \mu_f(E) = \lim_{j\to \infty } \mu_f(E_j)
+  .\]
+
+## Problem 4
+
+a. Show that $f\in L^1(\RR^n) \implies \abs{f(x)} < \infty$ almost everywhere.
+
+b. Show that if $\ts{f_k} \subseteq L^1(\RR^n)$ with $\sum \norm{f_k}_1 < \infty$ then $\sum f_k$ converges almost everywhere and in $L^1$.
+
+c. Use the Dominated Convergence Theorem to evaluate
+\[
+\lim_{t\to 0} \int_0^1 {e^{tx^2} - 1 \over t} \dx
+.\]
+
+
+
